--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,7 @@
 body {
     font-family: Helvetica, Verdana, sans-serif;
     font-size: 1rem;
+    line-height: 1rem;
 
     min-height: var(--min-height);
     min-width: var(--min-width);
