--- a/css/global.css
+++ b/css/global.css
@@ -1,8 +1,17 @@
 body {
-    font-family: Helvetica, Verdana, sans-serif;
-    font-size: 1rem;
-    line-height: 1rem;
-
     min-height: var(--min-height);
     min-width: var(--min-width);
+}
+
+* {
+    box-sizing: border-box;
+    display: block;
+}
+
+app {
+    font-family: var(--text-global-font);
+    font-size: 1rem;
+    color: var(--text-global-color);
+    background: white;
+
 }
