--- a/css/global.css
+++ b/css/global.css
@@ -1,23 +1,31 @@
-body {
-    min-height: var(--min-height);
-    min-width: var(--min-width);
+html {
+  font-size: 10vw;
+}
 
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    font-size: 100%;
-    line-height: 1.428571429;
-    letter-spacing: -.032em;
+body {
+  min-height: var(--min-height);
+  min-width: var(--min-width);
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
 
 * {
-    box-sizing: border-box;
-    display: block;
+  box-sizing: border-box;
+  display: block;
 }
 
 app {
-    font-family: var(--text-global-font);
-    color: var(--text-global-color);
-    background: white;
-    overflow-x: hidden;
+  font-family: var(--text-global-font);
+  color: var(--text-global-color);
+  background: white;
+  overflow-x: hidden;
+}
+
+app,
+input,
+textarea,
+select,
+button {
+  font-size: 0.5rem;
 }
