--- a/css/pages/reports.css
+++ b/css/pages/reports.css
@@ -10,9 +10,9 @@ reports {
 }
 
 reports report {
-  padding: 1rem;
+  padding: 0.5rem;
   position: relative;
-  border-bottom: solid 1px rgba(0,0,0,0.2)
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2)
 }
 
 reports report picture {
@@ -24,8 +24,7 @@ reports report picture {
 
 reports report name {
   position: absolute;
-  font-size: 1.1rem;
-  top: 1.1rem;
+  top: 0.5rem;
   left: 70px;
   right: 60px;
   white-space: nowrap;
@@ -35,16 +34,14 @@ reports report name {
 
 reports report distance {
   position: absolute;
-  top: 1rem;
-  line-height: 42px;
-  right: 1rem;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
-reports report date {
+reports report time {
   position: absolute;
-  top: 2.3rem;
+  top: 1rem;
   left: 70px;
-  font-size: 0.8rem;
 }
 
 reports report comment {
